Added video and audio players.

--- a/home.html
+++ b/home.html
@@ -171,6 +171,10 @@
                         ut
                         aliquip ex ea commodo consequat.
                     </p>
+                    <video style="width: 100%" controls>
+                        <source src="sample_video.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                     <button type="button" class="w3-button w3-theme-d2">
                         <i class="fa fa-thumbs-up"></i> Like</button>
                     <hr class="w3-clear">
@@ -204,7 +208,10 @@
                         ut
                         aliquip ex ea commodo consequat.
                     </p>
-                    <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
+                    <audio style="width: 100%" controls>
+                        <source src="sample_audio.mp3" type="audio/mpeg">
+                        Your browser does not support the audio tag.
+                    </audio>
                     <button type="button" class="w3-button w3-theme-d2">
                         <i class="fa fa-thumbs-up"></i> Like</button>
                     <hr class="w3-clear">
