Added convert date function.

--- a/user_profile.html
+++ b/user_profile.html
@@ -96,10 +96,14 @@
                         <td>
                             <button type="button" class="w3-button w3-theme-d2" style="float:right;">
                                 <i class="fa fa-handshake-o"></i> Connect</button>
+                            <button type="button" onclick="location.href='messages.html'" class="w3-button w3-theme-d2"
+                                style="float:right;">
+                                <i class="fa fa-envelope"></i> Message</button>
                         </td>
                     </table>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
                         et dolore magna aliqua.
                     </p>
                     <hr class="w3-clear">
@@ -122,19 +126,22 @@
                     <h4>Work Experience</h4>
                     <ul style="padding-left: 16px">
                         <li><b>Company #1</b> <i style="float:right;">Jan 2017 - Now</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li><b>Company #2</b> <i style="float:right">Oct 2015 - Nov 2016</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li><b>Company #3</b> <i style="float:right">Apr 2013 - Sep 2015</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
@@ -144,13 +151,15 @@
                     <h4>Education</h4>
                     <ul style="padding-left: 16px">
                         <li><b>University</b> <i style="float:right">Sep 2008 - Jun 2012</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li><b>School</b>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
@@ -208,6 +217,15 @@
                 x.className = x.className.replace(" w3-show", "");
             }
         }
+
+        function convert_date(current_date) {
+            var d_list = current_date.split("-");
+            var d = new Date(date_list[0], date_list[1]);
+            var d_string_list = d.toDateString();
+            var d_string = d_string_list[1].concat(d_string_list[3]);
+            return d_string;
+        }
+
     </script>
 </body>
 
