--- a/profile.html
+++ b/profile.html
@@ -91,7 +91,8 @@
                     <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large w3-margin-bottom">
                     <h4>Jane Doe</h4>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
                         et dolore magna aliqua.
                     </p>
                     <hr class="w3-clear">
@@ -114,19 +115,22 @@
                     <h4>Work Experience</h4>
                     <ul style="padding-left: 16px">
                         <li><b>Company #1</b> <i style="float:right;">Jan 2017 - Now</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li><b>Company #2</b> <i style="float:right">Oct 2015 - Nov 2016</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li><b>Company #3</b> <i style="float:right">Apr 2013 - Sep 2015</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
@@ -136,13 +140,15 @@
                     <h4>Education</h4>
                     <ul style="padding-left: 16px">
                         <li><b>University</b> <i style="float:right">Sep 2008 - Jun 2012</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li><b>School</b>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
@@ -202,6 +208,15 @@
                 x.className = x.className.replace(" w3-show", "");
             }
         }
+
+        function convert_date(current_date) {
+            var d_list = current_date.split("-");
+            var d = new Date(date_list[0], date_list[1]);
+            var d_string_list = d.toDateString();
+            var d_string = d_string_list[1].concat(d_string_list[3]);
+            return d_string;
+        }
+
     </script>
 </body>
 
