--- a/profile_admin.html
+++ b/profile_admin.html
@@ -193,6 +193,15 @@
                 x.className = x.className.replace(" w3-show", "");
             }
         }
+
+        function convert_date(current_date) {
+            var d_list = current_date.split("-");
+            var d = new Date(date_list[0], date_list[1]);
+            var d_string_list = d.toDateString();
+            var d_string = d_string_list[1].concat(d_string_list[3]);
+            return d_string;
+        }
+
     </script>
 </body>
 
