Added network pages.

--- a/profile.html
+++ b/profile.html
@@ -98,11 +98,10 @@
                     <hr class="w3-clear">
                     <h4>Contact Info</h4>
                     <p>
-                        <i class="fa fa-envelope-open"></i> Email: email@gmail.com</p>
-                    <p>
                         <i class="fa fa-phone"></i> Phone: +123456789</p>
-                    <p>
-                        <i class="fa fa-link"></i> Website: website.com</p>
+                    <hr class="w3-clear">
+                    <p><i class="fa fa-user"></i>
+                        <a href="user_network.html" class="w3-link"> View Network </a>
                     </p>
                 </div>
 
