--- a/network.html
+++ b/network.html
@@ -92,7 +92,8 @@
                                 <div class="w3-padding-8">
                                     <table style="width:100%">
                                         <td style="width: 100%">
-                                            <input id="search" type="text" placeholder="Search" class="w3-border w3-padding" style="width:100%;" />
+                                            <input id="search" type="text" placeholder="Search" class="w3-border w3-padding"
+                                                style="width:100%;" />
                                         </td>
                                         <td style="width: 100%">
                                             <button type="button" onclick="check_search();" class="w3-button w3-theme-d2">
@@ -106,12 +107,18 @@
                 </div>
 
                 <table style="width: 100%">
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
                     <tr style="width: 100%">
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
                                     <a href="user_profile.html">
-                                        <img src="images/avatar2.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                        <img src="images/avatar2.png" class="w3-round-large" style="height:106px;width:106px"
+                                            alt="Avatar">
                                     </a>
                                 </p>
                                 <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #1</a></h4>
@@ -121,14 +128,16 @@
                                 <p>
                                     <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                                 <p>
-                                    <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                    <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1,
+                                    1988</p>
                             </div>
                         </td>
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
                                     <a href="user_profile.html">
-                                        <img src="images/avatar3.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                        <img src="images/avatar3.png" class="w3-round-large" style="height:106px;width:106px"
+                                            alt="Avatar">
                                     </a>
                                 </p>
                                 <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #2</a></h4>
@@ -138,14 +147,16 @@
                                 <p>
                                     <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                                 <p>
-                                    <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                    <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1,
+                                    1988</p>
                             </div>
                         </td>
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
                                     <a href="user_profile.html">
-                                        <img src="images/avatar5.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                        <img src="images/avatar5.png" class="w3-round-large" style="height:106px;width:106px"
+                                            alt="Avatar">
                                     </a>
                                 </p>
                                 <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #3</a></h4>
@@ -155,7 +166,8 @@
                                 <p>
                                     <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                                 <p>
-                                    <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                    <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1,
+                                    1988</p>
                             </div>
                         </td>
                     </tr>
@@ -164,7 +176,8 @@
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
                                     <a href="user_profile.html">
-                                        <img src="images/avatar6.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                        <img src="images/avatar6.png" class="w3-round-large" style="height:106px;width:106px"
+                                            alt="Avatar">
                                     </a>
                                 </p>
                                 <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #4</a></h4>
@@ -174,7 +187,8 @@
                                 <p>
                                     <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                                 <p>
-                                    <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                    <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1,
+                                    1988</p>
                             </div>
                         </td>
                     </tr>
